terraform/vpc.tf
resource "aws_vpc" "main" {
   cidr_block = "10.0.0.0/16"
   tags = {
       Name = "${var.project}-vpc"
   }
}

resource "aws_subnet" "public_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "eu-west-1a"
  map_public_ip_on_launch = true
  tags = {
   Name = "${var.project}-public-1"
  }
}

resource "aws_subnet" "public_2" {
  vpc_id             = aws_vpc.main.id
  cidr_block         = "10.0.2.0/24"
  availability_zone  = "eu-west-1b"
  map_public_ip_on_launch = true
  tags = {
   Name = "${var.project}-public-2"
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = {
   Name = "${var.project}-igw"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_internet_gateway.main.id
  }
}

resource "aws_route_table_association" "public_1" {
  subnet_id       = aws_subnet.public_1.id
  route_table_id  = aws_route_table.public.id
}

resource "aws_route_table_association" "public_2" {
   subnet_id       = aws_subnet.public_2.id
   route_table_id  = aws_route_table.public.id
}
